# libhotstuff

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.rst  TODO.rst  docker-compose.yml  hotstuff-bls.conf  hotstuff-sec-bls0.conf  hotstuff-sec-bls1.conf  hotstuff-sec-bls3.conf  hotstuff-sec0.conf  hotstuff-sec1.conf  hotstuff-sec2.conf  hotstuff-sec3.conf  hotstuff.conf  log  run_client.sh  run_replicas.sh
bls/src/: signature.cpp
doc/: doxygen.conf
examples/: .gitignore  CMakeLists.txt  hotstuff_app.cpp  hotstuff_client.cpp
include/hotstuff/: client.h  consensus.h  core.h  crypto.h  entity.h  hotstuff.h  liveness.h  promise.hpp  task.h  type.h  util.h  worker.h
scripts/: faulty_leader_demo.sh  gen_conf.py  run.sh  run_client.sh  run_demo.sh  run_demo_client.sh  thr_hist.py
scripts/deploy/: README.rst  clients.txt  gen_all.sh  gen_inventory.py  replicas.txt  run.sh  run_cli.sh
scripts/deploy/app/: _setup.yml  build.yml  hotstuff_app.py  hotstuff_cli.py  reset.yml  run.yml  run_cli.yml
scripts/deploy/group_vars/: all.yml  clients.yml
src/: client.cpp  client.h  config.h.in  consensus.cpp  core.cpp  crypto.cpp  crypto.h  entity.cpp  entity.h  hotstuff.cpp  hotstuff_app.cpp  hotstuff_client.cpp  hotstuff_keygen.cpp  hotstuff_keygen_bls.cpp  hotstuff_tls_keygen.cpp  promise.hpp  type.h  util.cpp
test/: CMakeLists.txt  test_concurrent_queue.cpp  test_secp256k1.cpp
