include_directories(../src/
                    ../salticidae/include/
                    ../)

add_executable(test_secp256k1 test_secp256k1.cpp)
target_link_libraries(test_secp256k1 hotstuff_static)

add_executable(test_concurrent_queue test_concurrent_queue.cpp)
target_link_libraries(test_concurrent_queue salticidae_static pthread)
